--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.1",
     "next": "15.2.4",
+    "openai": "^4.93.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
